k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow

apiVersion: v1
kind: Namespace
metadata:
  name: traefik
